<resources>
    <string name="app_name">PEI 2022</string>
    <string name="voc_no_cart_o_postal">Você no Cartão Postal</string>
    <string name="linhas_de_nibus">Linhas de Ônibus</string>
    <string name="cart_es_postais">Cartões Postais</string>
    <string name="pei_2022">PEI 2022</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="categorias">Categorias   ------></string>
    <string name="praias">Praias</string>
    <string name="Parques">Parques</string>
    <string name="BelezasNaturais">Belezas Naturais</string>
    <string name="Igreja_e_Conventos">Igrejas e Conventos</string>
    <string name="praia_secreta">Praia Secreta</string>
    <string name="praiasecreta">Praia-secreta</string>
    <string name="Desc_Praia_Secreta">Tranquila, bucólica e sem ondas, é perfeita para a família, pois possui algumas castanheiras, que proporcionam uma boa sombra.</string>
    <string name="convento_da_penha">Convento da Penha</string>
    <string name="praia_do_frade">Praia do Frade</string>
    <string name="curva_da_jurema">Curva da Jurema</string>
    <string name="Desc_Curva_Jurema">Essa praia é bastante frequentada por quem gosta de ficar nos quiosques, tomando uma bebida e ouvindo música. O visual do lugar é bonito e não decepciona. A praia tem uma grande mistura de públicos, sempre com gente de todas as idades - essa é uma das melhores opções em Vitória.</string>
    <string name="veja_mais">Veja Mais!</string>
    <string name="parque_pedra_da_cebola">Parque Pedra da Cebola</string>
    <string name="Desc_Praia_Pedra_da_Cebola">O Parque Pedra da Cebola possui exemplares de Mata de Restinga e de Mata Atlântica e vegetação rupestre nativa do local, que abrigam pequenos répteis e aves. Com área superior a 100.000 m², o parque também conta com jardim oriental e um mirante, com vista para a parte do Maciço Central, o Porto de Tubarão e o Morro do Mestre Álvaro, localizado na Serra.</string>
    <string name="Desc_Praia_Cebola">O nome do parque deriva de uma grande pedra esculpida pela natureza que repousa sobre outra rocha. Devido a seu comportamento geológico, a pedra se \"descama\" de maneira similar às palhas de uma cebola. O Parque Pedra da Cebola tem parquinhos, lagos e um campo de futebol, além de um Centro de Educação Ambiental (CEA). A área também possui o sinal de internet livre do Vitória Online</string>
    <string name="Disp_PC">De Segunda à Sexta, aberto das 05:00 às 22:00. Horários de Pico: Segunda às 18:00, Terça à Quinta às 17:00, Sexta à Domingo às 16:00. ENTRADA GRÁTIS</string>
    <string name="Disc_PS_plus">Descoberta a cerca de três anos essa simpática prainha se tornou uma das mais desejadas e conhecidas praias da região de Vila Velha. Possuindo águas claras e de coloração variada entre o azul e o verde esmeralda, apresentando pequena faixa de areia dourada ela é o xodó dos capixabas. A praia tornou-se conhecida, após uma construtora de renome no estado, ter a proibição de fechar o acesso a praia negada.</string>
    <string name="Desc_Praia_Frade">A pequena praia é a mais bela e mais conhecida da Ilha do Frade. Cercada de pedras, ela tem cerca de 120 metros de extensão e uma linda e enorme castanheira oferecendo sombra. Ideal para estender a canga e relaxar. O acesso é feito por uma escadaria e a impressão que se tem é de estar em uma praia deserta, intocada.</string>
    <string name="Disc_PF_plus">A Ilha do Frade é uma Área de Preservação Ambiental (APA), ou seja, sua flora e fauna são conservadas por lei. Toda a natureza presente na ilha e no entorno dela está muito bem cuidada e é de encher os olhos! Muitas tartarugas, peixes coloridos, algas, crustáceos e moluscos podem ser avistados em mergulhos ou nas caminhadas pela ilha. Mais para dentro, as árvores, lagos e patos chamam a atenção.</string>
    <string name="Disc_CJ_plus">O mar de águas frias e calmas é ideal para a prática de esportes náuticos e com estreita faixa de areia para corridas e caminhadas. O visitante pode admirar a paisagem a partir de um dos quiosques com áreas cobertas, onde são servidos petiscos da culinária capixaba. A praia é indicada para a prática de stand up paddle e passeios de veleiro. A região conta ainda com calçadão, iluminação noturna, lanchonetes e conta com extensa área recreativa, além da estrutura para a prática de tênis, basquete, vôlei e futebol da Praça dos Namorados.</string>
    <string name="Desc_Convento_Penha">No alto de uma colina, na cidade de Viva Velha, essa igrejinha branca com dois coqueiros plantados na frente é  o maior ícone da cultura, do turismo e da fé capixaba.</string>
    <string name="Desc_CP">Você pode subir sua estrada a pé, de carro ou com vans que vão até o estacionamento. Logo após, para alcançar a antiga construção, há uma subida de 365 degraus. No Convento há missas diárias, em diferentes horários. Lá de cima a vista é incrível e, dependendo do lugar onde  você está, é possível ver Vitória, Vila Velha, a Praia da Costa e o Morro do Moreno. Em datas comemorativas, feriados e aos domingos a movimentação por lá é intensa. Não deixe de levar sua câmera.</string>
    <string name="Disp_CP">De Segunda à Sexta, aberto das 06:00 às 17:00. Horários de Pico: Sábado à Segunda às 10:00, Terça à Quinta às 15:00. ENTRADA GRÁTIS</string>
    <string name="parque_bot_nico_da_vale">Parque Botânico da Vale</string>
    <string name="Desc_Parque_Botanico">O Parque é grande, rodeado de muito verde e com uma série de espaços interativos para que crianças e os adultos de todas as idades possam se distrair e aprender ao mesmo tempo!</string>
    <string name="Disp_PB">Segunda - Fechado para Manutenção. De Terça a Domingo aberto das 08:00 hrs as 17:00 hrs. Horários de pico: Terça a Quinta 09:00 hrs, Sexta a Sábado 15:00 hrs e Domingo 11:00 hrs. ENTRADA GRATUITA E AGENDADA.</string>
    <string name="Desc_Parque_B">Entre as principais atrações do parque estão o jardim sensorial, um orquidário, trilhas ecológicas e o vagão do conhecimento, nosso preferido, que simula uma viagem de Trem, fazendo alusão a famosa viagem de Trem Vitória - Minas. No local tem ainda playground e uma ótima infraestrutura com  toaletes, bebedouros de água e lanchonete. Também há um espaço para fazer piquenique, a entrada com alimentos e bebidas no parque é liberada!</string>
    <string name="Desc_Parque_Bot">Entre as principais atrações do parque estão o jardim sensorial, um orquidário, trilhas ecológicas e o vagão do conhecimento, nosso preferido, que simula uma viagem de Trem, fazendo alusão a famosa viagem de Trem Vitória - Minas. No local tem ainda playground e uma ótima infraestrutura com toaletes, bebedouros de água e lanchonete. Também há um espaço para fazer piquenique, a entrada com alimentos e bebidas no parque é liberada!</string>
    <string name="museu">Museu</string>
    <string name="Desc_morro_moreno">Um dos destinos mais procurado para se aventurar na grande Vitória. Fica localizado na Praia da Costa em Vila Velha, uns 20 minutos da Capital. De fácil acesso, tem local para estacionar aos pés do morro, pela subida principal do mesmo.</string>
    <string name="Desc_morro_moreno_plus">Tem aventura para todos os gostos: trilha, rapel, vôo de parapente, caminhada e por ai vai. Muitas famílias sobem para fazer picnic no topo do morro, de onde temos uma vista incrível da baia de Vitória e do marzão ao redor.</string>
    <string name="pal_cio_anchieta">Palácio Anchieta</string>
    <string name="Desc_palacio_anchieta">Do topo da Cidade Alta, o Palácio Anchieta atrai olhares de quem passa pelo Centro de Vitória, Capital do Espírito Santo. Ocupando uma área de 7 mil metros quadrados, que comportam 135 cômodos, o edifício impressiona pelo tamanho.</string>
    <string name="Desc_Palacio_Anchieta">Fundado em 1551 para ser igreja, o conjunto arquitetônico é rico também em história. Com paredes em pé há quase cinco séculos, é a construção mais antiga a abrigar uma sede de governo no Brasil.</string>
    <string name="Disc_PA">Segunda a Sexta abre às 09:00 hrs até as 17:00 hrs. Sábado e Domingo abre às 09:00 hrs e 16:00 hrs. ENTRADA GRATUITA E AGENDADO.</string>
    <string name="Desc_fonte_grande">O Parque da Fonte Grande foi inaugurado em 2001 e é administrado pela Prefeitura de Vitória. Sua vegetação é característica de encostas da Mata Atlântica e a altura chega a 295 metros. Para chegar na sede administrativa do parque - onde ficam também as torres de TV - é necessário ir de carro ou moto.</string>
    <string name="Desc_fonte_grande_plus">O parque possui 4 mirantes: 2 na subida e 2 no topo. As fotos de hoje mostram a sede administrativa do parque e a Trilha da Pedra da Batata, que nos levam até o Mirante do Sumaré, onde nos seus 215 metros de altitude, nos dá uma vista privilegiada da região de Santo Antônio, São Pedro Grande Vitória e Ilha das Caieiras.</string>
    <string name="Desc_Catedral">A primeira igreja matriz de Vitória teria sido construída provavelmente ainda em 1550, na época da fundação da Vila de Nossa Senhora da Vitória. Inicialmente uma capela, o seu local de fundação é considerado o marco zero da cidade.</string>
    <string name="Desc_CM">" O projeto atual foi feito tendo o seu autor, André Carloni, aproveitado as partes já erguidas e mantido o estilo neogótico, inspirado na Catedral de Colônia, na Alemanha. Os vitrais, que cercam toda a catedral, foram construídos pelo artista italiano Cesar Alexandre Formenti e seu filho, Gastão, com quem tinha um ateliê[5].  Sua planta tem forma de cruz latina, voltada para o oriente, na direção de Jerusalém, e sua arquitetura eclética é inspirada no estilo gótico, algo comum em construções do período republicano."</string>
    <string name="catedral">Catedral Metropolitana de Vitória</string>
    <string name="Desc_CM_plus">" O projeto atual foi feito tendo o seu autor, André Carloni, aproveitado as partes já erguidas e mantido o estilo neogótico, inspirado na Catedral de Colônia, na Alemanha. Os vitrais, que cercam toda a catedral, foram construídos pelo artista italiano Cesar Alexandre Formenti e seu filho, Gastão, com quem tinha um ateliê.  Sua planta tem forma de cruz latina, voltada para o oriente, na direção de Jerusalém, e sua arquitetura eclética é inspirada no estilo gótico, algo comum em construções do período republicano."</string>
</resources>