<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#404040"
    android:orientation="vertical"
    tools:context=".museu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#404040"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="100dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/backgroundtitulos"
            android:fontFamily="casual"
            android:text="@string/pal_cio_anchieta"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageViewPA"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroundtextos"
            android:text="@string/Desc_palacio_anchieta"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewPS" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/VejaMaisPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/veja_mais" />

        <LinearLayout
            android:id="@+id/layoutPA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/backgroundtextos"
                android:text="@string/Desc_Palacio_Anchieta"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textIsSelectable="false"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/VejaMaisPC" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/backgroundtextos"
                android:text="@string/Disc_PA"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textIsSelectable="false"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <org.osmdroid.views.MapView
                android:id="@+id/mapViewPA"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>