<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#404040"
    android:orientation="vertical"
    tools:context=".Belezas_Naturais">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#404040"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="100dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/backgroundtitulos"
            android:fontFamily="casual"
            android:text="Morro do Moreno"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageViewMM"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroundtextos"
            android:text="@string/Desc_morro_moreno"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewPS" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/VejaMaisMM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/veja_mais" />

        <LinearLayout
            android:id="@+id/layoutmm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/backgroundtextos"
                android:text="@string/Desc_morro_moreno_plus"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textIsSelectable="false"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/VejaMaisPC" />

            <org.osmdroid.views.MapView
                android:id="@+id/mapViewMM"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>
        </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="100dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="100dp"
                android:background="@drawable/backgroundtitulos"
                android:fontFamily="casual"
                android:text="Mirante Fonte Grande"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageViewFG"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintDimensionRatio="16:9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:srcCompat="@drawable/ic_launcher_foreground"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/backgroundtextos"
                android:text="@string/Desc_fonte_grande"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textIsSelectable="false"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewPS" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/VejaMaisFG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/veja_mais" />

            <LinearLayout
                android:id="@+id/layoutfg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/backgroundtextos"
                    android:text="@string/Desc_fonte_grande_plus"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textIsSelectable="false"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/VejaMaisPC" />

                <org.osmdroid.views.MapView
                    android:id="@+id/mapViewFG"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"/>
            </LinearLayout>

    </LinearLayout>

</ScrollView>